# HyrumGuard

./: .gitignore  .hyrumguard.yml  AGENTS.md  ATTEMPTS.md  CHANGELOG.md  CONTROL.md  GOAL.md  LICENSE  MANIFEST.in  NOTES.md  PLAN.md  README.md  SPEC.md  action.yml  pyproject.toml
.github/workflows/: hyrumguard.yml  release.yml
docs/plans/: 2026-06-02-hyrumguard-design.md  2026-06-02-hyrumguard-implementation.md  2026-06-02-stable-release-design.md  2026-06-02-stable-release-implementation.md
docs/reference/: architecture.md  configuration.md  contract-atoms.md  integrations.md  pilot-playbook.md  release.md  research-report.md  roadmap.md  security-sandboxing.md
examples/: github-workflow.yml  hyrumguard-js.yml  hyrumguard.yml
hyrumguard/: __init__.py  analysis.py  canary.py  cli.py  config.py  diff.py  discovery.py  doctor.py  explain.py  io.py  models.py  suppressions.py  synthesis.py  validation.py
hyrumguard/miners/: __init__.py  javascript.py  python.py
hyrumguard/reporters/: __init__.py  json_report.py  markdown.py  sarif.py
tests/: test_analysis_and_reports.py  test_cli.py  test_config_and_discovery.py  test_doctor.py  test_explain.py  test_mining.py  test_public_release_readiness.py  test_release_readiness.py  test_suppressions.py
tests/fixtures/: sample.diff
tests/fixtures/downstreams/js_client/test/: usage.test.ts
tests/fixtures/downstreams/python_client/tests/: test_usage.py
